fix contact button on mobile

--- a/src/layouts/gatsrap.scss
+++ b/src/layouts/gatsrap.scss
@@ -189,6 +189,13 @@ img:hover {
   color: #ffffff;
 }
 
+@media screen and (max-width: 576px) {
+  .box {
+    border-left: none;
+    border-right: none;
+  }
+}
+
 .box:last-child {
   margin-bottom: 8rem;
 }
@@ -236,4 +243,10 @@ a {
 
 .btn--rectangle {
   border-radius: 0 !important;
+}
+
+@media screen and (max-width: 576px) {
+  .btn--rectangle {
+    font-size: 1rem !important;
+  }
 }
